--- a/doppel/public/stylesheets/style.css
+++ b/doppel/public/stylesheets/style.css
@@ -1,6 +1,8 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background: url(../images/cerebro.jpg) center center / cover no-repeat fixed;
+  color: #efecec;
 }
 
 a {
