--- a/doppel/views/index.jade
+++ b/doppel/views/index.jade
@@ -1,5 +1,7 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  header.container
+    section.content
+      h1= title
+      p Welcome to #{title}
