added register tag form

--- a/doppel/views/instagram/index.jade
+++ b/doppel/views/instagram/index.jade
@@ -6,3 +6,19 @@ block content
       h1= title
       p Welcome to #{title}
 
+      form(
+        name='registerTag'
+        action='/instagram'
+        method='get'
+      )
+        input(
+          type='text'
+          name='tagName'
+          placeholder='登録するタグを入力してね！「#」はいらないよ！'
+          size='50'
+        )
+        input(
+          type='submit'
+          value='登録！'
+        )
+
