--- a/doppel/views/instagram/index.jade
+++ b/doppel/views/instagram/index.jade
@@ -5,6 +5,7 @@ block content
     section.content
       h1= title
       p Welcome to #{title}
+      p User Count: #{userCount} users
 
       form(
         name='registerTag'
